fix: loading new entity on routing change & white spacing

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -19,4 +19,5 @@ app-root {
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 80vh;
 }
